--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
-  },
+    "start": "node ./bin/www"
+    },
   "dependencies": {
     "bootstrap": "^5.3.0-alpha1",
     "cookie-parser": "~1.4.4",
